<!-- Copyright 2017 Google Inc.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">Causality</string>
    <string name="action_settings">Settings</string>

    <!--Channel-->
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel description</string>
    <!--NotificationNotifier-->
    <string name="notification_title">A notification!</string>
    <string name="notification_text">Some notification text</string>

    <!--Main Activity-->
    <string name="button_new_question">New Question</string>
    <string name="button_create_inquiry">Create Inquiry</string>
    <string name="button_investigate_inquiry">Investigate Inquiry</string>

    <!--New Question-->
    <string name="q_instruction">Write a question</string>
    <string name="q_type_instruction">Define question</string>
    <string name="set_day_instruction">Pick day/days</string>
    <string name="set_time_instruction">Pick a time</string>
    <string name="a_instruction">Pick an interval</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_question">Write your question here…</string>
    <string name="hint_interval">Pick an interval…</string>
    <string name="empty_not_saved">Question not saved because it is empty.</string>



    <!--Create Inquiry -->
    <string name="inquiry_instruction_1">Pick an Effect</string>
    <string name="inquiry_instruction_2">Pick a Cause</string>

    <!--Investigate Inquiry -->




</resources>