

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/big_padding"
    android:layout_marginRight="@dimen/big_padding"
    android:fillViewport="false"
    tools:context="oscar.gmail.com.causality.question.NewQuestionFragment"
    android:id="@+id/q_fragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/q_instruction"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/buttonLabel"
            android:padding="@dimen/small_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/new_question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_question"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/set_time_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/set_time_instruction"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/buttonLabel"
            android:padding="@dimen/small_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp"/>

        <!--Inte optimalt att ha layout i layout?-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Spinner
                android:id="@+id/hour_spinner"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/hours"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/minute_spinner"
                android:layout_width="50pt"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/minutes"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <TextView
            android:id="@+id/set_reps_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/set_reps_instruction"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/buttonLabel"
            android:padding="@dimen/small_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/reps_spinner"
            android:layout_width="50pt"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:entries="@array/reps"
            android:spinnerMode="dropdown"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:background="@color/colorPrimary"
            android:onClick="saveQuestionBtnClicked"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" />


    </LinearLayout>
</ScrollView>